# stereodemo

./: pyproject.toml  setup.py
datasets/drivingstereo/: convert_kitti_calib.py
datasets/eth3d_lowres/: convert_calib_txt.py
datasets/middlebury_2014/: convert_calib_txt.py
stereodemo/: __init__.py  chang_realtime_stereo_onnx.py  main.py  method_chang_realtime_stereo.py  method_cre_stereo.py  method_dist_depth.py  method_hitnet.py  method_opencv_bm.py  method_raft_stereo.py  method_sttr.py  methods.py  oakd_source.py  utils.py  visualizer.py
tests/: test_methods.py
tools/: capture_oakd_frames.py  chang_realtimestereo_to_torchscript_onnx.py
